# bridgemcp

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  plugin_request.md
.github/workflows/: tests.yml
bridgemcp/: __init__.py  _version.py  application.py  exceptions.py  execution.py  middleware.py  plugin.py
bridgemcp/adapters/: __init__.py  mcp.py
bridgemcp/config/: __init__.py  models.py
bridgemcp/prompts/: __init__.py  normalize.py  registry.py
bridgemcp/resources/: __init__.py  normalize.py  registry.py
bridgemcp/tools/: __init__.py  registry.py
examples/hello_world/: README.md  server.py
tests/: test_adapter.py  test_application.py  test_cli.py  test_config.py  test_exceptions.py  test_execution.py  test_invocation.py  test_lifecycle.py  test_middleware.py  test_plugin.py  test_prompt_invocation.py  test_prompt_registry.py  test_resource_invocation.py  test_resource_registry.py  test_tool_registry.py
