[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bridge-mcp"
version = "0.2.0"
description = "A Python framework for building MCP servers"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Muhammad Arslan" }
]
keywords = ["mcp", "ai", "llm", "claude", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "black>=24.0",
    "pyright>=1.1",
]

[project.urls]
Homepage = "https://github.com/Arsie-codes/bridgemcp"
Repository = "https://github.com/Arsie-codes/bridgemcp"
Issues = "https://github.com/Arsie-codes/bridgemcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["bridgemcp"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.11"
strict = true
